Project alignment, reference corrections, and bug fixes